# ownit_streamlit

./: .gitignore  Dockerfile  memory.sqlite  memory.sqlite-shm  pyproject.toml
.devcontainer/: devcontainer.json
app/src/: run_streamlit.py  streamlit.py
app/src/agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
notebooks/: langchain.ipynb  main.ipynb  openai.ipynb
